--- a/Ex20171019/app/src/main/res/layout/activity_main.xml
+++ b/Ex20171019/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,7 +28,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="7" />
+                android:layout_weight="6" />
 
             <Button
                 android:id="@+id/swRed"
@@ -38,7 +38,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:background="#FFFF0000"
-                android:text="紅色"
+                android:text="@string/red"
                 android:textColor="#FFFFFFFF"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -51,7 +51,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:background="#FF0000FF"
-                android:text="藍色"
+                android:text="@string/blue"
                 android:textColor="#FFFFFFFF"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -64,8 +64,21 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:background="#FF363636"
-                android:text="清空"
+                android:text="@string/clear"
                 android:textColor="#77FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/allClear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="#FFFFFFFF"
+                android:text="@string/refresh"
+                android:textColor="#FF888888"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -74,14 +87,14 @@
         <LinearLayout
             android:id="@+id/canvasLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="7"
-            android:background="#FF0000"
+            android:background="#FF000000"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical" />
 
     </LinearLayout>
 
